--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,7 +5,7 @@ builds:
     skip: true
 release:
   github:
-    owner: willguibr
+    owner: SecurityGeekIO
     name: zscaler-sdk-go
 
   draft: true
