--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         go-version: [1.19]
         os: [ubuntu-latest, macos-latest]
-    uses: ./.github/actions/go-test
+    uses: ./.github/actions/go-test@reusable-action
     environment: ZPA_QA_TENANT01
     inputs:
       goVersion: ${{ matrix.go-version }}
