--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,19 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflow/reuse-go-test.yml
-    inputs:
-      environment: ZPA_QA_TENANT01
+    uses: ./.github/workflows/reuse-go-test.yml
+    environment: ZPA_QA_TENANT01
+    secrets:
+      ZIA_USERNAME: ${{ secrets.ZIA_USERNAME }}
+      ZIA_PASSWORD: ${{ secrets.ZIA_PASSWORD }}
+      ZIA_API_KEY: ${{ secrets.ZIA_API_KEY }}
+      ZIA_CLOUD: ${{ secrets.ZIA_CLOUD }}
+      ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
+      ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
+      ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
+      ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
+      ZDX_API_KEY_ID: ${{ secrets.ZDX_API_KEY_ID }}
+      ZDX_API_SECRET: ${{ secrets.ZDX_API_SECRET }}
 
     # steps:
     #   - uses: actions/setup-go@v4
