--- a/.github/workflows/reuse-go-test.yml
+++ b/.github/workflows/reuse-go-test.yml
@@ -1,9 +1,9 @@
 on:
   workflow_call:
-    # inputs:
-    #   environment:
-    #     description: The GitHub environment to use
-    #     required: true
+    inputs:
+      environment:
+        description: The GitHub environment to use
+        required: true
     secrets:
       ZIA_USERNAME:
         required: true
@@ -28,6 +28,7 @@ on:
 
 jobs:
   go-test:
+    environment: ${{ inputs.environment }}
     strategy:
       matrix:
         go-version: [1.19]
