--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,8 @@ on:
 jobs:
   test:
     uses: ./.github/workflows/reuse-go-test.yml
-    environment: ZPA_QA_TENANT01
+    with:
+      environment: ZPA_QA_TENANT01
     secrets:
       ZIA_USERNAME: ${{ secrets.ZIA_USERNAME }}
       ZIA_PASSWORD: ${{ secrets.ZIA_PASSWORD }}
