--- a/.github/workflows/reuse-go-test.yml
+++ b/.github/workflows/reuse-go-test.yml
@@ -3,6 +3,7 @@ on:
     inputs:
       environment:
         description: The GitHub environment to use
+        type: string
         required: true
     secrets:
       ZIA_USERNAME:
