--- a/.github/workflows/reuse-go-test.yml
+++ b/.github/workflows/reuse-go-test.yml
@@ -6,14 +6,6 @@ on:
         type: string
         required: true
     secrets:
-      ZIA_USERNAME:
-        required: true
-      ZIA_PASSWORD:
-        required: true
-      ZIA_API_KEY:
-        required: true
-      ZIA_CLOUD:
-        required: true
       ZPA_CLIENT_ID:
         required: true
       ZPA_CLIENT_SECRET:
@@ -21,10 +13,6 @@ on:
       ZPA_CUSTOMER_ID:
         required: true
       ZPA_CLOUD:
-        required: true
-      ZDX_API_KEY_ID:
-        required: true
-      ZDX_API_SECRET:
         required: true
 
 jobs:
@@ -47,21 +35,12 @@ jobs:
           key: ${{ runner.os }}-go${{ matrix.go-version }}-${{ hashFiles('**/go.mod') }}-${{ hashFiles('**/go.sum') }}
       - name: Set Credentials
         env:
-          ZIA_USERNAME: ${{ secrets.ZIA_USERNAME }}
-          ZIA_PASSWORD: ${{ secrets.ZIA_PASSWORD }}
-          ZIA_API_KEY: ${{ secrets.ZIA_API_KEY }}
-          ZIA_CLOUD: ${{ secrets.ZIA_CLOUD }}
           ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
           ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
           ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
           ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
-          ZDX_API_KEY_ID: ${{ secrets.ZDX_API_KEY_ID }}
-          ZDX_API_SECRET: ${{ secrets.ZDX_API_SECRET }}
         run: |
           go test -v ./zpa
-          go test -v ./zia
-          go test -v ./zdx
-          go test -v ./zcc
           go test -v -cover ./tests -v -parallel 30 -timeout 120m
           go test -v -cover ./tests/integration/zpa -v -parallel 30 -timeout 120m
-          go test -v -cover ./tests/integration/zia -v -parallel 30 -timeout 120m
+          go test -v -cover ./tests/unit/zpa -v -parallel 30 -timeout 120m
