--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   zpa-qa-tenant01:
-    uses: ./.github/workflows/reuse-go-test.yml
+    uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_QA_TENANT01
     secrets:
@@ -30,7 +30,7 @@ jobs:
       ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
 
   zpa-qa-tenant02:
-    uses: ./.github/workflows/reuse-go-test.yml
+    uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_QA_TENANT02
     secrets:
@@ -39,6 +39,15 @@ jobs:
       ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
       ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
   
+  zia-tests:
+    uses: ./.github/workflows/reuse-zia-tests.yml
+    with:
+      environment: ZIA_ZSCALER_TWO
+    secrets:
+      ZIA_USERNAME: ${{ secrets.ZIA_USERNAME }}
+      ZIA_PASSWORD: ${{ secrets.ZIA_PASSWORD }}
+      ZIA_API_KEY: ${{ secrets.ZIA_API_KEY }}
+      ZIA_CLOUD: ${{ secrets.ZIA_CLOUD }}
 
     # steps:
     #   - uses: actions/setup-go@v4
