--- a/.github/workflows/reuse-zia-tests.yml
+++ b/.github/workflows/reuse-zia-tests.yml
@@ -16,8 +16,9 @@ on:
         required: true
 
 jobs:
-  go-test:
+  zia-test:
     environment: ${{ inputs.environment }}
+    concurrency: ${{ inputs.environment }}
     strategy:
       matrix:
         go-version: [1.19]
