fix and remove explicit secret passing

--- a/.github/workflows/reuse-zdx-tests.yml
+++ b/.github/workflows/reuse-zdx-tests.yml
@@ -7,7 +7,7 @@ on:
         required: true
 
 jobs:
-  zpa-test:
+  zdx-test:
     environment: ${{ inputs.environment }}
     strategy:
       matrix:
