--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,33 +23,61 @@ jobs:
     uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_QA_TENANT01
-  
+    secrets:
+      ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
+      ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
+      ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
+      ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
+
   zpa-beta-tenant01:
     uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_BETA_TENANT01
+    secrets:
+      ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
+      ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
+      ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
+      ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
     needs: zpa-qa-tenant01
 
   zpa-prod-tenant01:
     uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_PROD_TENANT01
+    secrets:
+      ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
+      ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
+      ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
+      ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
     needs: zpa-qa-tenant01
 
   zpa-qa-tenant02:
     uses: ./.github/workflows/reuse-zpa-tests.yml
     with:
       environment: ZPA_QA_TENANT02
-
+    secrets:
+      ZPA_CLIENT_ID: ${{ secrets.ZPA_CLIENT_ID }}
+      ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
+      ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
+      ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
+  
   zia-tests:
     uses: ./.github/workflows/reuse-zia-tests.yml
     with:
       environment: ZIA_ZSCALER_TWO
+    secrets:
+      ZIA_USERNAME: ${{ secrets.ZIA_USERNAME }}
+      ZIA_PASSWORD: ${{ secrets.ZIA_PASSWORD }}
+      ZIA_API_KEY: ${{ secrets.ZIA_API_KEY }}
+      ZIA_CLOUD: ${{ secrets.ZIA_CLOUD }}
 
   zdx-tenant01:
     uses: ./.github/workflows/reuse-zdx-tests.yml
     with:
       environment: ZDX_TENANT01
+    secrets:
+      ZDX_API_KEY_ID: ${{ secrets.ZDX_API_KEY_ID }}
+      ZDX_API_SECRET: ${{ secrets.ZDX_API_SECRET }}
 
     # steps:
     #   - uses: actions/setup-go@v4
