--- a/.github/workflows/reuse-zpa-tests.yml
+++ b/.github/workflows/reuse-zpa-tests.yml
@@ -40,7 +40,8 @@ jobs:
           ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
           ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
         run: |
-          go test -v ./zpa
-          go test -v -cover ./tests -v -parallel 30 -timeout 120m
-          go test -v -cover ./tests/integration/zpa -v -parallel 30 -timeout 120m
-          go test -v -cover ./tests/unit/zpa -v -parallel 30 -timeout 120m
+          # go test -v ./zpa
+          # go test -v -cover ./tests -v -parallel 30 -timeout 120m
+          # go test -v -cover ./tests/integration/zpa -v -parallel 30 -timeout 120m
+          # go test -v -cover ./tests/unit/zpa -v -parallel 30 -timeout 120m
+          go test ./tests/integration/zpa -race -coverprofile coverage.out -covermode=atomic -v -parallel 30 -timeout 120m
