--- a/.github/workflows/reuse-zia-tests.yml
+++ b/.github/workflows/reuse-zia-tests.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.19]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/setup-go@v4
@@ -40,5 +40,5 @@ jobs:
           ZIA_API_KEY: ${{ secrets.ZIA_API_KEY }}
           ZIA_CLOUD: ${{ secrets.ZIA_CLOUD }}
         run: |
-          go test ./zia/... -race -coverprofile ziacoverage.txt -covermode=atomic -v -parallel 1 -timeout 120m
+          go test ./zia/... -race -coverprofile ziacoverage.txt -covermode=atomic -v -parallel 30 -timeout 120m
           go tool cover -func ziacoverage.txt | grep total:
