--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ on:
   # change.
 
   schedule:
-    - cron: '0 13 * * *'
+    - cron: '0 13 * * 1-5'
 
 jobs:
   zpa-qa-tenant01:
@@ -60,7 +60,7 @@ jobs:
       ZPA_CLIENT_SECRET: ${{ secrets.ZPA_CLIENT_SECRET }}
       ZPA_CUSTOMER_ID: ${{ secrets.ZPA_CUSTOMER_ID }}
       ZPA_CLOUD: ${{ secrets.ZPA_CLOUD }}
-  
+
   zia-tests:
     uses: ./.github/workflows/reuse-zia-tests.yml
     with:
