feat: Update to v2.1.4

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,7 +5,7 @@ builds:
     skip: true
 release:
   github:
-    owner: SecurityGeekIO
+    owner: zscaler
     name: zscaler-sdk-go
 
   draft: true
