--- a/.github/workflows/zpa-test.yml
+++ b/.github/workflows/zpa-test.yml
@@ -57,7 +57,7 @@ jobs:
         run: go mod download
 
       - name: Retrieve Secrets from Vault for Beta
-        uses: hashicorp/vault-action@3
+        uses: hashicorp/vault-action@v3
         with:
           url: ${{ secrets.VAULT_URL }}
           token: ${{ secrets.VAULT_TOKEN }}
